--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header>
-        <a href="#" class="logo">cod<span>e</span>r</a>
+        <a href="#" class="logo">cod<span></span>r</a>e
     </header>
 
     <ul class="navlist">    
