--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Portfolio Website</title>
-    <link rel="stylesheet" type ="text/css" href="style.css">
 
+    <!-- CSS-->
+    <link rel="stylesheet" type ="text/css" href="style.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,17 +17,23 @@
 </head>
 <body>
     <header>
-        <a href="#" class="logo">cod<span></span>r</a>e
+    <a href="#" class="logo">LoT<span>s</span>U.</a>
+
+        <ul class="navlist">    
+            <li><a href="#" class="active">Home</a></li>
+            <li><a href="#">About Me</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+
+        <div class="bx bx-menu" id="menu-icon">
+
+        </div>
     </header>
 
-    <ul class="navlist">    
-        <li><a href="#" class="active">Home</a></li>
-        <li><a href="#">About Me</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Portfolio</a></li>
-        <li><a href="#">Contact</a></li>
-    </ul>
-
+    
+<!-- custom JavaScript link -->
     <script type="text/javascript" src="js/script.js"></script>
 
 </body>
