--- a/index.html
+++ b/index.html
@@ -31,7 +31,22 @@
 
         </div>
     </header>
-
+<!-- home section design-->
+<section class="home" id="home">
+    <div class="home-text">
+        <div class="slide">
+            <span class="one">Hello</span>
+            <span class="two">I'm</span>
+     </div>
+     <h1>Newland</h1>
+     <h3>Frontend <span>Engineer.</span></h3>
+     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.</p>
+     <div class="buttons">
+        <a href="#" class="btn">Say Hello</a>
+        <a href="#" class="btn2"><span><i class="bx bx-play"></i></span>Watch My Work</a>
+     </div>
+</div>
+</section>
     
 <!-- custom JavaScript link -->
     <script type="text/javascript" src="js/script.js"></script>
