backgroung image bug fixed

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
      </div>
      <h1>Newland</h1>
      <h3>Frontend <span>Engineer.</span></h3>
-     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.</p>
+     <p>I am competent in Frontend engineering employing HTML5, CSS3 <br /> 
+        JavaScript and Bootstrap for small to large-scale projects. <br />
+        I am an efficient communicator with a sharp acumen  <br />strong interpersonal and leadership skills ready for the next challenge.</p>
      <div class="buttons">
         <a href="#" class="btn">Say Hello</a>
         <a href="#" class="btn2"><span><i class="bx bx-play"></i></span>Watch My Work</a>
