About Me Section Design

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 </head>
 <body>
     <header>
-    <a href="#" class="logo">LoT<span>s</span>U.</a>
+    <a href="#" class="logo">LOT<span>S</span>U.</a>
 
         <ul class="navlist">    
             <li><a href="#" class="active">Home</a></li>
-            <li><a href="#">About Me</a></li>
+            <li><a href="#">About </a></li>
             <li><a href="#">Services</a></li>
             <li><a href="#">Portfolio</a></li>
             <li><a href="#">Contact</a></li>
@@ -36,7 +36,7 @@
     <div class="home-text">
         <div class="slide">
             <span class="one">Hello</span>
-            <span class="two">I'm</span>
+            <span class="two">I am</span>
      </div>
      <h1>Newland</h1>
      <h3>Frontend <span>Engineer.</span></h3>
@@ -49,7 +49,20 @@
      </div>
 </div>
 </section>
+
+    <!-- About section design-->
+    <section class="about" id="about">
+        <div class="about-img">
+            <img src="./pg7.jpg" alt="about-img">
+        </div>
+
+        <div class="about-text">
+            <h2>About <span>Me</span></h2>
+        </div>
     
+    
+    </section>
+
 <!-- custom JavaScript link -->
     <script type="text/javascript" src="js/script.js"></script>
 
