sticky NavBar and About Page Update

--- a/index.html
+++ b/index.html
@@ -54,7 +54,21 @@
     <!-- About section design-->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="./pg7.jpg" alt="about-img">
+            <img src="pg9.jpg" alt="about-img" style="width:500px">
+            <style>
+                img {
+                  border: 1px solid #474747;
+                  border-radius: 20px;
+                  padding: 5px;
+                  width: 150px;
+                  height: 520px;
+                }
+                </style>
+        </div>
+
+        <div id="header_container">
+            <div id="header">
+            </div>
         </div>
 
         <div class="about-text">
