--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 </div>
 
 <div class="box">
-    <div class="s-icon">
+    <div class="s-icon>
         <i class="bx bx-code-alt"></i>
     </div>
 <h3>Web Development</h3>
