Portfolio section under development.

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <i class="bx bx-code-alt"></i>
     </div>
 <h3>Website Development</h3>
-<p>cessitatibus. Blanditiis  pariatur Distinctio quos suscipi pariatur amet et fuga voluptas. Distinctio quos suscipit sint!</p>
+<p>cessitatibus. Blanditiiss suscipi pariatur amet et fuga Distinctio quos suscipit sint!</p>
 <a href="#" class="read" > Read More </a>
 </div>
 
@@ -107,6 +107,77 @@
 </div>
 
 </section>
+
+<!-- Portfolio section design-->
+ <section class="Portfolio" id="Portfolio">
+<div class="main-text">
+    <p>Portfolio</p>
+    <h2><span>Latest</span> Projects</h2>
+</div>
+
+<div class="Portfolio-content">
+<div class="row">
+    <img src="pt1.jpg">
+    <div class="layer">
+        <h5>Virtual Design</h5>
+        <p>Lorem ipsum, dolor sit amet consectetur rerum voluptatum ea. 
+         <br> Neque amet officia reiciendis dolores distinctio sapiente.</p>
+    <a href="#"><i class="bx bx-link-external"></i></a>
+        </div>
+</div>
+
+<div class="row">
+    <img src="pt2.jpg">
+    <div class="layer">
+        <h5>Virtual Rabbit  </h5>
+        <p>Lorem ipsum, dolor sit amet consectetu. 
+            <br> Neque amet officia reiciendis dolores earum  <br> labore distinctio sapiente.</p>
+    <a href="#"><i class="bx bx-link-external"></i></a>
+        </div>
+</div>
+
+<div class="row">
+    <img src="pt3.jpg">
+    <div class="layer">
+        <h5>Rabbit Nut </h5>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse animi rerum voluptatum ea. 
+         <br> Neque amet officia reiciendis dolores nobis</p>
+    <a href="#"><i class="bx bx-link-external"></i></a>
+        </div>
+</div>
+
+<div class="row">
+    <img src="pt4.jpg">
+    <div class="layer">
+        <h5>Eat out</h5>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse animi rerum voluptatum ea. 
+         <br> Neque amet officia reiciendis dolores  <br> labore distinctio sapiente.</p>
+    <a href="#"><i class="bx bx-link-external"></i></a>
+        </div>
+</div>
+
+<div class="row">
+    <img src="pt5.jpg">
+    <div class="layer">
+        <h5>Faith Baking</h5>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse animi rerum voluptatum ea. 
+         <br> Neque amet officia reiciendis  similique, saepe nobis <br> labore distinctio sapiente.</p>
+    <a href="#"><i class="bx bx-link-external"></i></a>
+        </div>
+</div>
+
+<div class="row">
+    <img src="pt6.jpg">
+    <div class="layer">
+        <h5>Shop Attendance software</h5>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse animi rerum voluptatum ea. 
+         <br> Neque amet officia reiciendis dolores similique, saepe nobis <br> labore distinctio sapiente.</p>
+    <a href="#"><i class="bx bx-link-external"></i></a>
+        </div>
+</div>
+
+</div>
+ </section>
 
 <!-- custom JavaScript link -->
     <script type="text/javascript" src="js/script.js"></script>
