Portfolio section update on images

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <span class="two">I am</span>
      </div>
      <h1>Newland</h1>
-     <h3>Frontend <span>Engineer.</span></h3>
+     <h3>Junior Software <span>Developer.</span></h3>
      <p>I am competent in Frontend engineering employing HTML5, CSS3 <br /> 
         JavaScript and Bootstrap for small to large-scale projects. <br />
         I am an efficient communicator with a sharp acumen  <br />strong interpersonal and leadership skills ready for the next challenge.</p>
