Portfolio upgrade update

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -6,19 +7,21 @@
     <title>Responsive Portfolio Website</title>
 
     <!--CSS-->
-    <link rel="stylesheet" type ="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;900&display=swap"
+        rel="stylesheet">
 
 </head>
+
 <body>
     <header>
-    <a href="#" class="logo">LOT<span>S</span>U.</a>
+        <a href="#" class="logo">LOT<span>S</span>U.</a>
 
-        <ul class="navlist">    
+        <ul class="navlist">
             <li><a href="#" class="active">Home</a></li>
             <li><a href="#">About </a></li>
             <li><a href="#">Services</a></li>
@@ -30,156 +33,164 @@
         </div>
     </header>
 
-<!-- home section design-->
-<section class="home" id="home">
-    <div class="home-text">
-        <div class="slide">
-            <span class="one">Hello</span>
-            <span class="two">I am</span>
-     </div>
-     <h1>Newland</h1>
-     <h3>Junior Software <span>Developer.</span></h3>
-     <p>I am competent in Frontend engineering employing HTML5, CSS3 <br /> 
-        JavaScript and Bootstrap for small to large-scale projects. <br />
-        I am an efficient communicator with a sharp acumen  <br />strong interpersonal and leadership skills ready for the next challenge.</p>
-     <div class="buttons">
-        <a href="#" class="btn">Say Hello</a>
-        <a href="#" class="btn2"><span><i class="bx bx-play"></i></span>Watch My Work</a>
-     </div>
-</div>
-</section>
+    <!-- home section design-->
+    <section class="home" id="home">
+        <div class="home-text">
+            <div class="slide">
+                <span class="one">Hello</span>
+                <span class="two">I am</span>
+            </div>
+            <h1>Newland</h1>
+            <h3>Junior Software <span>Developer.</span></h3>
+            <p>I am competent in Frontend engineering employing HTML5, CSS3 <br />
+                JavaScript and Bootstrap for small to large-scale projects. <br />
+                I am an efficient communicator with a sharp acumen <br />strong interpersonal and leadership skills
+                ready for the next challenge.</p>
+            <div class="buttons">
+                <a href="#" class="btn">Say Hello</a>
+                <a href="#" class="btn2"><span><i class="bx bx-play"></i></span>Watch My Work</a>
+            </div>
+        </div>
+    </section>
 
     <!-- About section design-->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="new.jpg"> 
+            <img src="new.jpg">
         </div>
 
         <div class="about-text">
             <h2>About <span>Me</span></h2>
             <h4> UI/UX Creative designer</h4>
-            <p>I am an efficient communicator velit in voluptatum illo incidunt aspernatur Lorem ipsum dolor sit amet 
-                consectetur adipisicing elit. Repellat nemo consequatur iure aperiam 
-                facere tempore, quia saepe provident distinctio ad ex ipsum. Veniam omnis ducimus dolorum 
+            <p>I am an efficient communicator velit in voluptatum illo incidunt aspernatur Lorem ipsum dolor sit amet
+                consectetur adipisicing elit. Repellat nemo consequatur iure aperiam
+                facere tempore, quia saepe provident distinctio ad ex ipsum. Veniam omnis ducimus dolorum
                 totam neque provident quibusdam. natus nemo rem numquam assumenda magnam, molestiae,
-                 ut ducimus distinctio? Hic, perspiciatis facilis! <br />strong interpersonal and leadership
-                  skills ready for the next challenge.</p>
+                ut ducimus distinctio? Hic, perspiciatis facilis! <br />strong interpersonal and leadership
+                skills ready for the next challenge.</p>
             <a href="#" class="btn"> More About</a>
         </div>
-    
+
     </section>
 
-      <!-- service section design-->
-      <section class="services" id="services">
-            <div class="main-text">
-                <p> What i am an expect in. </p>
-                <h2><span>My</span> Services</h2>
+    <!-- service section design-->
+    <section class="services" id="services">
+        <div class="main-text">
+            <p> What i am an expect in. </p>
+            <h2><span>My</span> Services</h2>
+        </div>
+        <div class="services-content">
+            <div class="box">
+                <div class="s-icon">
+                    <i class="bx bx-mobile-alt"></i>
+                </div>
+                <h3>Software Development</h3>
+                <p>cessitatibus. Blanditiis pariatur amet et fuga voluptas. Distinctio quos suscipit sint!</p>
+                <a href="#" class="read"> Read More </a>
             </div>
-<div class="services-content">
-    <div class="box">
-        <div class="s-icon">
-            <i class="bx bx-mobile-alt"></i>
+
+            <div class="box">
+                <div class="s-icon">
+                    <i class="bx bxs-edit-alt"></i>
+                </div>
+                <h3> UI / UX Creative Designer</h3>
+                <p>cessitatibus. Blanditiis pariatur amet et fuga voluptas. Distinctio quos suscipit sint!</p>
+                <a href="#" class="read"> Read More </a>
+            </div>
+
+            <div class="box">
+                <div class="s-icon">
+                    <i class="bx bx-code-alt"></i>
+                </div>
+                <h3>Website Development</h3>
+                <p>cessitatibus. Blanditiiss suscipi pariatur amet et fuga Distinctio quos suscipit sint!</p>
+                <a href="#" class="read"> Read More </a>
+            </div>
+
+
         </div>
-<h3>Software Development</h3>
-<p>cessitatibus. Blanditiis pariatur amet et fuga voluptas. Distinctio quos suscipit sint!</p>
-<a href="#" class="read" > Read More </a>
-</div>
 
-<div class="box">
-    <div class="s-icon">
-        <i class="bx bxs-edit-alt"></i>
-    </div>
-<h3> UI / UX Creative Designer</h3>
-<p>cessitatibus. Blanditiis pariatur amet et fuga voluptas. Distinctio quos suscipit sint!</p>
-<a href="#" class="read" > Read More </a>
-</div>
+    </section>
 
-<div class="box">
-    <div class="s-icon">
-        <i class="bx bx-code-alt"></i>
-    </div>
-<h3>Website Development</h3>
-<p>cessitatibus. Blanditiiss suscipi pariatur amet et fuga Distinctio quos suscipit sint!</p>
-<a href="#" class="read" > Read More </a>
-</div>
-
-
-</div>
-
-</section>
-
-<!-- Portfolio section design-->
- <section class="Portfolio" id="Portfolio">
-<div class="main-text">
-    <p>Portfolio</p>
-    <h2><span>Latest</span> Projects</h2>
-</div>
-
-<div class="Portfolio-content">
-<div class="row">
-    <img src="pt1.jpg">
-    <div class="layer">
-        <h5>Virtual Design</h5>
-        <p>Lorem ipsum, dolor sit amet consectetur rerum voluptatum ea. 
-         <br> Neque amet officia reiciendis dolores distinctio sapiente.</p>
-    <a href="#"><i class="bx bx-link-external"></i></a>
+    <!-- Portfolio section design-->
+    <section class="Portfolio" id="Portfolio">
+        <div class="main-text">
+            <p>Portfolio</p>
+            <h2><span>Latest</span> Projects</h2>
         </div>
-</div>
 
-<div class="row">
-    <img src="pt2.jpg">
-    <div class="layer">
-        <h5>Virtual Rabbit  </h5>
-        <p>Lorem ipsum, dolor sit amet consectetu. 
-            <br> Neque amet officia reiciendis dolores earum  <br> labore distinctio sapiente.</p>
-    <a href="#"><i class="bx bx-link-external"></i></a>
+        <div class="Portfolio-content">
+            <div class="row">
+                <img src="pt1.jpg">
+                <div class="layer">
+                    <h5>Virtual Design</h5>
+                    <p>Lorem ipsum, dolor sit amet consectetur rerum voluptatum ea.
+                        <br> Neque amet officia reiciendis dolores distinctio sapiente.
+                    </p>
+                    <a href="#"><i class="bx bx-link-external"></i></a>
+                </div>
+            </div>
+
+            <div class="row">
+                <img src="pt2.jpg">
+                <div class="layer">
+                    <h5>Virtual Rabbit </h5>
+                    <p>Lorem ipsum, dolor sit amet consectetu.
+                        <br> Neque amet officia reiciendis dolores earum <br> labore distinctio sapiente.
+                    </p>
+                    <a href="#"><i class="bx bx-link-external"></i></a>
+                </div>
+            </div>
+
+            <div class="row">
+                <img src="pt3.jpg">
+                <div class="layer">
+                    <h5>Rabbit Nut </h5>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse animi rerum voluptatum ea.
+                        <br> Neque amet officia reiciendis dolores nobis
+                    </p>
+                    <a href="#"><i class="bx bx-link-external"></i></a>
+                </div>
+            </div>
+
+            <div class="row">
+                <img src="pt4.jpg">
+                <div class="layer">
+                    <h5>Eat out</h5>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse animi rerum voluptatum ea.
+                        <br> Neque amet officia reiciendis dolores <br> labore distinctio sapiente.
+                    </p>
+                    <a href="#"><i class="bx bx-link-external"></i></a>
+                </div>
+            </div>
+
+            <div class="row">
+                <img src="pt5.jpg">
+                <div class="layer">
+                    <h5>Faith Baking</h5>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse animi rerum voluptatum ea.
+                        <br> Neque amet officia reiciendis similique, saepe nobis <br> labore distinctio sapiente.
+                    </p>
+                    <a href="#"><i class="bx bx-link-external"></i></a>
+                </div>
+            </div>
+
+            <div class="row">
+                <img src="pt6.jpg">
+                <div class="layer">
+                    <h5>Shop Attendance software</h5>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse animi rerum voluptatum ea.
+                        <br> Neque amet officia reiciendis dolores similique, saepe nobis <br> labore distinctio
+                        sapiente.
+                    </p>
+                    <a href="#"><i class="bx bx-link-external"></i></a>
+                </div>
+            </div>
+
         </div>
-</div>
+    </section>
 
-<div class="row">
-    <img src="pt3.jpg">
-    <div class="layer">
-        <h5>Rabbit Nut </h5>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse animi rerum voluptatum ea. 
-         <br> Neque amet officia reiciendis dolores nobis</p>
-    <a href="#"><i class="bx bx-link-external"></i></a>
-        </div>
-</div>
-
-<div class="row">
-    <img src="pt4.jpg">
-    <div class="layer">
-        <h5>Eat out</h5>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse animi rerum voluptatum ea. 
-         <br> Neque amet officia reiciendis dolores  <br> labore distinctio sapiente.</p>
-    <a href="#"><i class="bx bx-link-external"></i></a>
-        </div>
-</div>
-
-<div class="row">
-    <img src="pt5.jpg">
-    <div class="layer">
-        <h5>Faith Baking</h5>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse animi rerum voluptatum ea. 
-         <br> Neque amet officia reiciendis  similique, saepe nobis <br> labore distinctio sapiente.</p>
-    <a href="#"><i class="bx bx-link-external"></i></a>
-        </div>
-</div>
-
-<div class="row">
-    <img src="pt6.jpg">
-    <div class="layer">
-        <h5>Shop Attendance software</h5>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse animi rerum voluptatum ea. 
-         <br> Neque amet officia reiciendis dolores similique, saepe nobis <br> labore distinctio sapiente.</p>
-    <a href="#"><i class="bx bx-link-external"></i></a>
-        </div>
-</div>
-
-</div>
- </section>
-
-<!-- custom JavaScript link -->
+    <!-- custom JavaScript link -->
     <script type="text/javascript" src="js/script.js"></script>
 
 </body>
