--- a/index.html
+++ b/index.html
@@ -190,6 +190,50 @@
         </div>
     </section>
 
+  <!-- Portfolio section design-->
+  <section class="contact" id="contact">
+    <div class="contant-text">
+        <h2>Contact <span>Me!</span></h2>
+        <h2>If you have Any Project in mind </h2>
+        <p>Lorem ipsum dolor sit amet consectetur adiero saepe ipsam hic unde! Sittur adiero saepe ipsam hic unde! Sit.tur adiero saepe ipsam hic unde! Sit..</p>
+    <div class="list">
+        <li><a href="#">07868636684</a></li>
+        <li><a href="#">lotsubills@gmail.com</a></li>
+        <li><a href="#">Like share &Subscribe</a></li>
+    </div>
+
+
+    <div class="contact-icons">
+        <a href="#"><i class="bx bxl-twitter"></i></a>
+        <a href="#"><i class="bx bxl-instagram"></i></a>
+        <a href="#"><i class="bx bxl-github"></i></a>
+        <a href="#"><i class="bx bxl-linkedin"></i></a>
+    </div>
+    </div>
+
+    <div class="contact-form">
+<form action="">
+    <input type="name" placeholder="Your Name" required>
+    <input type="email" placeholder="Your Email Address" required >
+    <input type="text" placeholder="Your Mobile Number" required> 
+    <textarea name="" id="" cols="35" rows="10" placeholder="How can i Help You." required></textarea>
+    <input type="submit" value="Send Message" class="submit" required>
+</form>
+    </div>
+  </section>
+
+   <!-- End section design-->
+   <section class="end">
+<div class="last-text">
+    <p>Copyright 2023 by Newland Lotsu All RightS Reserved</p>
+</div>
+
+<div class="top">
+    <a href="#home"><i class="bx bx-up-arrow-alt" ></i></a>
+</div>
+
+   </section>
+
     <!-- custom JavaScript link -->
     <script type="text/javascript" src="js/script.js"></script>
 
