Media query for  multiple platforms added.

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         <a href="#" class="logo">LOT<span>S</span>U.</a>
 
         <ul class="navlist">
-            <li><a href="#" class="active">Home</a></li>
-            <li><a href="#">About </a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#Home" class="active">Home</a></li>
+            <li><a href="#About">About</a></li>
+            <li><a href="#Service">Services</a></li>
+            <li><a href="#Portfolio">Portfolio</a></li>
+            <li><a href="#Contact">Contact</a></li>
         </ul>
 
         <div class="bx bx-menu" id="menu-icon">
@@ -41,14 +41,14 @@
                 <span class="two">I am</span>
             </div>
             <h1>Newland</h1>
-            <h3>Junior Software <span>Developer.</span></h3>
-            <p>I am competent in Frontend engineering employing HTML5, CSS3 <br />
-                JavaScript and Bootstrap for small to large-scale projects. <br />
-                I am an efficient communicator with a sharp acumen <br />strong interpersonal and leadership skills
+            <h3>Software <span> Developer.</span></h3>
+            <p>I am competent in Frontend Development employing HTML5, CSS3 <br />
+                JavaScript,Bootstrap and React for small to large-scale projects. <br />
+                I am an efficient communicator with a sharp acumen, <br />strong interpersonal and leadership skills
                 ready for the next challenge.</p>
             <div class="buttons">
                 <a href="#" class="btn">Say Hello</a>
-                <a href="#" class="btn2"><span><i class="bx bx-play"></i></span>Watch My Work</a>
+                <a href="#Portfolio" class="btn2"><span><i class="bx bx-play"></i></span>Watch My Work</a>
             </div>
         </div>
     </section>
@@ -61,13 +61,14 @@
 
         <div class="about-text">
             <h2>About <span>Me</span></h2>
-            <h4> UI/UX Creative designer</h4>
-            <p>I am an efficient communicator velit in voluptatum illo incidunt aspernatur Lorem ipsum dolor sit amet
-                consectetur adipisicing elit. Repellat nemo consequatur iure aperiam
-                facere tempore, quia saepe provident distinctio ad ex ipsum. Veniam omnis ducimus dolorum
-                totam neque provident quibusdam. natus nemo rem numquam assumenda magnam, molestiae,
-                ut ducimus distinctio? Hic, perspiciatis facilis! <br />strong interpersonal and leadership
-                skills ready for the next challenge.</p>
+            <h4> UI/UX Design & Protyping</h4>
+            <p> Visual design is what we are all waiting for as designers, but its important to take into account all 
+                the hard work we have done in the design process up to this point.
+                 Research, wireframes, moodboards, competitive sets, etc.. 
+                 all go into this first portion of the visual design processI am dedicated to the continual learning of computer science and its related areas. 
+            I strive to create software at the highest quality based on current knowledge. 
+            I adapt my work processes as my understanding grows. <br />I have passion for creating and building innovative and efficient applications 
+            on figma and giving the client a view of the project by prototyping the design.</p> 
             <a href="#" class="btn"> More About</a>
         </div>
 
@@ -76,7 +77,6 @@
     <!-- service section design-->
     <section class="services" id="services">
         <div class="main-text">
-            <p> What i am an expect in. </p>
             <h2><span>My</span> Services</h2>
         </div>
         <div class="services-content">
@@ -123,33 +123,35 @@
             <div class="row">
                 <img src="pt1.jpg">
                 <div class="layer">
+                    <a href="#"><i class="bx bx-link-external"></i></a>
                     <h5>Virtual Design</h5>
                     <p>Lorem ipsum, dolor sit amet consectetur rerum voluptatum ea.
                         <br> Neque amet officia reiciendis dolores distinctio sapiente.
                     </p>
-                    <a href="#"><i class="bx bx-link-external"></i></a>
-                </div>
-            </div>
-
-            <div class="row">
-                <img src="pt2.jpg">
-                <div class="layer">
-                    <h5>Virtual Rabbit </h5>
-                    <p>Lorem ipsum, dolor sit amet consectetu.
-                        <br> Neque amet officia reiciendis dolores earum <br> labore distinctio sapiente.
-                    </p>
-                    <a href="#"><i class="bx bx-link-external"></i></a>
                 </div>
             </div>
 
             <div class="row">
                 <img src="pt3.jpg">
                 <div class="layer">
+                    <a href="#"><i class="bx bx-link-external"></i></a>
                     <h5>Rabbit Nut </h5>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse animi rerum voluptatum ea.
                         <br> Neque amet officia reiciendis dolores nobis
                     </p>
+                    
+                </div>
+            </div>
+
+            <div class="row">
+                <img src="pt3.jpg">
+                <div class="layer">
                     <a href="#"><i class="bx bx-link-external"></i></a>
+                    <h5>Rabbit Nut </h5>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse animi rerum voluptatum ea.
+                        <br> Neque amet officia reiciendis dolores nobis
+                    </p>
+                    
                 </div>
             </div>
 
@@ -207,7 +209,7 @@
         <a href="#"><i class="bx bxl-twitter"></i></a>
         <a href="#"><i class="bx bxl-instagram"></i></a>
         <a href="#"><i class="bx bxl-github"></i></a>
-        <a href="#"><i class="bx bxl-linkedin"></i></a>
+        <a href="#https://www.linkedin.com/in/newland-lotsu-8bb30297/"><i class="bx bxl-linkedin"></i></a>
     </div>
     </div>
 
@@ -225,7 +227,7 @@
    <!-- End section design-->
    <section class="end">
 <div class="last-text">
-    <p>Copyright 2023 by Newland Lotsu All RightS Reserved</p>
+    <p>Copyright 2023 by Newland All Rights Reserved</p>
 </div>
 
 <div class="top">
