Editing all place holders with actuals.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Portfolio Website</title>
 
-    <!--CSS-->
+    <!-- Custom CSS link -->
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 
@@ -18,22 +16,25 @@
 </head>
 
 <body>
+
+    <!--Hearder Design Start-->
     <header>
         <a href="#" class="logo">LOT<span>S</span>U.</a>
 
         <ul class="navlist">
-            <li><a href="#Home" class="active">Home</a></li>
-            <li><a href="#About">About</a></li>
-            <li><a href="#Service">Services</a></li>
+            <li><a href="#home" class="active">Home</a></li>
+            <li><a href="#about">About Me</a></li>
+            <li><a href="#services">Services</a></li>
             <li><a href="#Portfolio">Portfolio</a></li>
-            <li><a href="#Contact">Contact</a></li>
+            <li><a href="#contact">Contact Me</a></li>
         </ul>
 
         <div class="bx bx-menu" id="menu-icon">
         </div>
     </header>
+    <!--header Design Ends-->
 
-    <!-- home section design-->
+    <!-- home section design start-->
     <section class="home" id="home">
         <div class="home-text">
             <div class="slide">
@@ -65,9 +66,9 @@
             <p> Visual design is what we are all waiting for as designers, but its important to take into account all 
                 the hard work we have done in the design process up to this point.
                  Research, wireframes, moodboards, competitive sets, etc.. 
-                 all go into this first portion of the visual design processI am dedicated to the continual learning of computer science and its related areas. 
+                 all go into this first portion of the visual design process I am dedicated to the continual learning of computer science and its related areas. 
             I strive to create software at the highest quality based on current knowledge. 
-            I adapt my work processes as my understanding grows. <br />I have passion for creating and building innovative and efficient applications 
+            I adapt my work processes as my understanding grows. I have passion for creating and building innovative and efficient applications 
             on figma and giving the client a view of the project by prototyping the design.</p> 
             <a href="#" class="btn"> More About</a>
         </div>
@@ -85,7 +86,8 @@
                     <i class="bx bx-mobile-alt"></i>
                 </div>
                 <h3>Software Development</h3>
-                <p>cessitatibus. Blanditiis pariatur amet et fuga voluptas. Distinctio quos suscipit sint!</p>
+                <p>Combining React-js and Node-js is great user interface with modern web technologies. React-js allows me to create app views using components, which are modular and reusable pieces of code. Nodejs provides a runtime environment for executing JavaScript code on the server. 
+                <br> It also provides access to a variety of web development APIs in order to build advanced applications. </p>
                 <a href="#" class="read"> Read More </a>
             </div>
 
@@ -94,7 +96,12 @@
                     <i class="bx bxs-edit-alt"></i>
                 </div>
                 <h3> UI / UX Creative Designer</h3>
-                <p>cessitatibus. Blanditiis pariatur amet et fuga voluptas. Distinctio quos suscipit sint!</p>
+                <p>UI/UX design is a critical component in the creation of digital products, 
+                and Figma for prototyping are two of the most popular tools used by me.
+                Together, these tools allow UI/UX designers to create high-fidelity, interactive designs that can be shareable, 
+                testable and refined before launch. Figma allows UI/UX helps me to bring ideas to life in a collaborative environment, 
+                enabling them to design for both web and mobile platforms.
+             </p>
                 <a href="#" class="read"> Read More </a>
             </div>
 
@@ -103,7 +110,10 @@
                     <i class="bx bx-code-alt"></i>
                 </div>
                 <h3>Website Development</h3>
-                <p>cessitatibus. Blanditiiss suscipi pariatur amet et fuga Distinctio quos suscipit sint!</p>
+                <p>I have a solid foundation in software engineering principles, data structures and algorithms. 
+                    I have an excellent understanding of  programming languages, such as Javascript, React, and Material-UI, 
+                    and am proficient with web development with Node.js and Bootstrap 5. <br>My ability to build, 
+                test and debug complex software applications makes me a great asset and I am eager to apply my skills in the workplace.</p>
                 <a href="#" class="read"> Read More </a>
             </div>
 
